--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -427,6 +427,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\TestHarnessService0.c</FilePath>
             </File>
+            <File>
+              <FileName>KeyMapper.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\KeyMapper.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
