Started Servo_SM, finished pseudocode for Servo_SM, Servo_SM responds to KeyMapper

--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -490,6 +490,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\PWM16Tiva.c</FilePath>
             </File>
+            <File>
+              <FileName>Servo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Servo.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
