First draft of Motor_SM, made changes to TOT_SM and Servo_SM

--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -495,6 +495,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Servo.c</FilePath>
             </File>
+            <File>
+              <FileName>Motor.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Motor.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
