First draft of Game_SM, working with KeyMapper; minor changes to Motor_SM

--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -505,6 +505,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Spinner.c</FilePath>
             </File>
+            <File>
+              <FileName>Game.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Game.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
