--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -510,6 +510,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Game.c</FilePath>
             </File>
+            <File>
+              <FileName>PingPong.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\PingPong.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
