--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -505,6 +505,21 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Spinner.c</FilePath>
             </File>
+            <File>
+              <FileName>Game.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Game.c</FilePath>
+            </File>
+            <File>
+              <FileName>PingPong.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\PingPong.c</FilePath>
+            </File>
+            <File>
+              <FileName>Blower.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Blower.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
