--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -515,6 +515,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\PingPong.c</FilePath>
             </File>
+            <File>
+              <FileName>Blower.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Blower.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -639,6 +644,11 @@
               <FileName>PWM16Tiva.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\PWM16Tiva.h</FilePath>
+            </File>
+            <File>
+              <FileName>Blower.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Blower.h</FilePath>
             </File>
           </Files>
         </Group>
