--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -2179,6 +2179,16 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Blower.c</FilePath>
             </File>
+            <File>
+              <FileName>Servo_TEST.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Servo_TEST.c</FilePath>
+            </File>
+            <File>
+              <FileName>Servo_actuator.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Servo_actuator.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
