--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -578,6 +578,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\ShiftRegisterWrite .c</FilePath>
             </File>
+            <File>
+              <FileName>Fan_control.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan_control.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -717,6 +722,11 @@
               <FileName>ShiftRegisterWrite.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\ShiftRegisterWrite.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1401,6 +1411,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\ShiftRegisterWrite .c</FilePath>
             </File>
+            <File>
+              <FileName>Fan_control.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan_control.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1540,6 +1555,11 @@
               <FileName>ShiftRegisterWrite.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\ShiftRegisterWrite.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2224,6 +2244,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\ShiftRegisterWrite .c</FilePath>
             </File>
+            <File>
+              <FileName>Fan_control.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan_control.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2363,6 +2388,11 @@
               <FileName>ShiftRegisterWrite.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\ShiftRegisterWrite.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan.h</FilePath>
             </File>
           </Files>
         </Group>
