--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -579,52 +579,14 @@
               <FilePath>.\Source\ShiftRegisterWrite .c</FilePath>
             </File>
             <File>
-              <FileName>Write.c</FileName>
+              <FileName>Fan_control.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\Source\Write.c</FilePath>
-              <FileOption>
-                <CommonProperty>
-                  <UseCPPCompiler>2</UseCPPCompiler>
-                  <RVCTCodeConst>0</RVCTCodeConst>
-                  <RVCTZI>0</RVCTZI>
-                  <RVCTOtherData>0</RVCTOtherData>
-                  <ModuleSelection>0</ModuleSelection>
-                  <IncludeInBuild>0</IncludeInBuild>
-                  <AlwaysBuild>2</AlwaysBuild>
-                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
-                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
-                  <PublicsOnly>2</PublicsOnly>
-                  <StopOnExitCode>11</StopOnExitCode>
-                  <CustomArgument></CustomArgument>
-                  <IncludeLibraryModules></IncludeLibraryModules>
-                  <ComprImg>1</ComprImg>
-                </CommonProperty>
-                <FileArmAds>
-                  <Cads>
-                    <interw>2</interw>
-                    <Optim>0</Optim>
-                    <oTime>2</oTime>
-                    <SplitLS>2</SplitLS>
-                    <OneElfS>2</OneElfS>
-                    <Strict>2</Strict>
-                    <EnumInt>2</EnumInt>
-                    <PlainCh>2</PlainCh>
-                    <Ropi>2</Ropi>
-                    <Rwpi>2</Rwpi>
-                    <wLevel>2</wLevel>
-                    <uThumb>2</uThumb>
-                    <uSurpInc>2</uSurpInc>
-                    <uC99>2</uC99>
-                    <useXO>2</useXO>
-                    <VariousControls>
-                      <MiscControls></MiscControls>
-                      <Define></Define>
-                      <Undefine></Undefine>
-                      <IncludePath></IncludePath>
-                    </VariousControls>
-                  </Cads>
-                </FileArmAds>
-              </FileOption>
+              <FilePath>.\Source\Fan_control.c</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -765,6 +727,11 @@
               <FileName>ShiftRegisterWrite.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\ShiftRegisterWrite.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1450,9 +1417,14 @@
               <FilePath>.\Source\ShiftRegisterWrite .c</FilePath>
             </File>
             <File>
-              <FileName>Write.c</FileName>
+              <FileName>Fan_control.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\Source\Write.c</FilePath>
+              <FilePath>.\Source\Fan_control.c</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -1593,6 +1565,11 @@
               <FileName>ShiftRegisterWrite.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\ShiftRegisterWrite.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2278,9 +2255,14 @@
               <FilePath>.\Source\ShiftRegisterWrite .c</FilePath>
             </File>
             <File>
-              <FileName>Write.c</FileName>
+              <FileName>Fan_control.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\Source\Write.c</FilePath>
+              <FilePath>.\Source\Fan_control.c</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2421,6 +2403,11 @@
               <FileName>ShiftRegisterWrite.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\ShiftRegisterWrite.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan.h</FilePath>
             </File>
           </Files>
         </Group>
