--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -588,6 +588,54 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Fan.c</FilePath>
             </File>
+            <File>
+              <FileName>Fan_test.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan_test.c</FilePath>
+              <FileOption>
+                <CommonProperty>
+                  <UseCPPCompiler>2</UseCPPCompiler>
+                  <RVCTCodeConst>0</RVCTCodeConst>
+                  <RVCTZI>0</RVCTZI>
+                  <RVCTOtherData>0</RVCTOtherData>
+                  <ModuleSelection>0</ModuleSelection>
+                  <IncludeInBuild>0</IncludeInBuild>
+                  <AlwaysBuild>2</AlwaysBuild>
+                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
+                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
+                  <PublicsOnly>2</PublicsOnly>
+                  <StopOnExitCode>11</StopOnExitCode>
+                  <CustomArgument></CustomArgument>
+                  <IncludeLibraryModules></IncludeLibraryModules>
+                  <ComprImg>1</ComprImg>
+                </CommonProperty>
+                <FileArmAds>
+                  <Cads>
+                    <interw>2</interw>
+                    <Optim>0</Optim>
+                    <oTime>2</oTime>
+                    <SplitLS>2</SplitLS>
+                    <OneElfS>2</OneElfS>
+                    <Strict>2</Strict>
+                    <EnumInt>2</EnumInt>
+                    <PlainCh>2</PlainCh>
+                    <Ropi>2</Ropi>
+                    <Rwpi>2</Rwpi>
+                    <wLevel>2</wLevel>
+                    <uThumb>2</uThumb>
+                    <uSurpInc>2</uSurpInc>
+                    <uC99>2</uC99>
+                    <useXO>2</useXO>
+                    <VariousControls>
+                      <MiscControls></MiscControls>
+                      <Define></Define>
+                      <Undefine></Undefine>
+                      <IncludePath></IncludePath>
+                    </VariousControls>
+                  </Cads>
+                </FileArmAds>
+              </FileOption>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -732,6 +780,11 @@
               <FileName>Fan.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\Fan.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan_test.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan_test.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -1426,6 +1479,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Fan.c</FilePath>
             </File>
+            <File>
+              <FileName>Fan_test.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan_test.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1570,6 +1628,11 @@
               <FileName>Fan.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\Fan.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan_test.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan_test.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2264,6 +2327,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\Fan.c</FilePath>
             </File>
+            <File>
+              <FileName>Fan_test.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\Fan_test.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2408,6 +2476,11 @@
               <FileName>Fan.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\Fan.h</FilePath>
+            </File>
+            <File>
+              <FileName>Fan_test.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\Fan_test.h</FilePath>
             </File>
           </Files>
         </Group>
